<resources>
    <string name="app_name">SummerPractice22</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_main">Main</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_music">Music</string>
    <string name="menu_chats">Chats</string>
</resources>