<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mainFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_menu"
        android:title="@string/menu_main"
        android:visible="true" />
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person"
        android:title="@string/menu_profile" />
    <item
        android:id="@+id/settingsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_settings"
        android:title="@string/menu_settings" />
    <item
        android:id="@+id/musicFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_music"
        android:title="@string/menu_music" />
    <item
        android:id="@+id/chatsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_chat"
        android:title="@string/menu_chats" />
</menu>